--- a/app/views/smartrent/admin/rewards/index.html.erb
+++ b/app/views/smartrent/admin/rewards/index.html.erb
@@ -5,8 +5,10 @@
 <% content_for(:ui_center) do %>
   <div class="listing">
     <div class="links pull-right">
-      <%= link_to 'Import rewards', import_admin_rewards_path, :class => "btn btn-default", :style => "display:none" %>
-      <%= link_to 'New reward', new_admin_reward_path, :class => "btn btn-primary" %>
+      <% if current_user.is_admin? %>
+        <%= link_to 'Import rewards', import_admin_rewards_path, :class => "btn btn-default", :style => "display:none" %>
+        <%= link_to 'New reward', new_admin_reward_path, :class => "btn btn-primary" %>
+      <% end %>
     </div>
     <h3>Listing rewards</h3>
 
@@ -30,9 +32,11 @@
             <td><%= reward.period_end.to_s(:year_month_day) if reward.period_end %></td>
             <td><%= Smartrent::Reward.types[reward.type_] %></td>
             <td>
-              <%= link_to 'Show', admin_reward_path(reward) %> | 
-              <%= link_to 'Edit', edit_admin_reward_path(reward) %> | 
-              <%= link_to 'Delete', admin_reward_path(reward), method: :delete, data: { confirm: 'Are you sure?' } %>
+              <%= link_to 'Show', admin_reward_path(reward) %>
+              <% if current_user.is_admin? %> | 
+                <%= link_to 'Edit', edit_admin_reward_path(reward) %> | 
+                <%= link_to 'Delete', admin_reward_path(reward), method: :delete, data: { confirm: 'Are you sure?' } %>
+              <% end %>
             </td>
           </tr>
         <% end %>
@@ -41,7 +45,7 @@
         <%= page_entries_info @rewards %>
         <%= page_navigation_links @rewards %>
       </div>
-    <% elsif @search == "1" %>
+    <% elsif params[:search] == "1" %>
       <div class="alert alert-warning">No rewards found</div>
     <% else %>
       <div class="alert alert-warning">No rewards have been added yet.</div>
