--- a/app/views/smartrent/admin/features/index.html.erb
+++ b/app/views/smartrent/admin/features/index.html.erb
@@ -5,8 +5,10 @@
 <% content_for(:ui_center) do %>
   <div class="listing">
     <div class="links pull-right">
-      <%= link_to 'Import Features', import_admin_features_path, :class => "btn btn-default", :style => "display:none" %>
-      <%= link_to 'New Feature', new_admin_feature_path, :class => "btn btn-primary" %>
+      <% if current_user.is_admin? %>
+        <%= link_to 'Import Features', import_admin_features_path, :class => "btn btn-default", :style => "display:none" %>
+        <%= link_to 'New Feature', new_admin_feature_path, :class => "btn btn-primary" %>
+      <% end %>
     </div>
     <h3>Listing Features</h3>
 
@@ -20,7 +22,12 @@
         <% @admin_features.each do |admin_feature| %>
           <tr>
             <td><%= admin_feature.name %></td>
-            <td><%= link_to 'Edit', edit_admin_feature_path(admin_feature) %> | <%= link_to 'Delete', admin_feature_path(admin_feature), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <td>
+              <% if current_user.is_admin? %>
+                <%= link_to 'Edit', edit_admin_feature_path(admin_feature) %> | 
+                <%= link_to 'Delete', admin_feature_path(admin_feature), method: :delete, data: { confirm: 'Are you sure?' } %>
+              <% end %>
+            </td>
           </tr>
         <% end %>
       </table>
@@ -28,7 +35,7 @@
         <%= page_entries_info @admin_features %>
         <%= page_navigation_links @admin_features %>
       </div>
-    <% elsif @search == "1" %>
+    <% elsif params[:search] == "1" %>
       <div class="alert alert-warning">No admin_features found</div>
     <% else %>
       <div class="alert alert-warning">No admin_features have been added yet.</div>
