--- a/app/views/smartrent/admin/features/show.html.erb
+++ b/app/views/smartrent/admin/features/show.html.erb
@@ -1,6 +1,8 @@
 <% content_for(:ui_center) do %>
   <div class="main">
-    <%= link_to 'Edit', edit_admin_feature_path(@admin_feature) %> |
+    <% if current_user.is_admin? %>
+      <%= link_to 'Edit', edit_admin_feature_path(@admin_feature) %> |
+    <% end %>
     <%= link_to 'Back', admin_features_path %>
     
   </div>
