--- a/app/views/smartrent/admin/floor_plans/show.html.erb
+++ b/app/views/smartrent/admin/floor_plans/show.html.erb
@@ -55,8 +55,9 @@
       <%= @admin_floor_plan.penthouse %>
     </p>
 
-
-    <%= link_to 'Edit', edit_admin_floor_plan_path(@admin_floor_plan) %> |
+    <% if current_user.is_admin? %>
+      <%= link_to 'Edit', edit_admin_floor_plan_path(@admin_floor_plan) %> |
+    <% end %>
     <%= link_to 'Back', admin_floor_plans_path %>
   </div>
 <% end %>
