--- a/app/views/smartrent/admin/homes/index.html.erb
+++ b/app/views/smartrent/admin/homes/index.html.erb
@@ -5,8 +5,10 @@
 <% content_for(:ui_center) do %>
   <div class="listing">
     <div class="links pull-right">
-      <%= link_to 'Import Homes', import_admin_homes_path, :class => "btn btn-default", :style => "display:none" %>
-      <%= link_to 'New Home', new_admin_home_path, :class => "btn btn-primary" %>
+      <% if current_user.is_admin? %>
+        <%= link_to 'Import Homes', import_admin_homes_path, :class => "btn btn-default", :style => "display:none" %>
+        <%= link_to 'New Home', new_admin_home_path, :class => "btn btn-primary" %>
+      <% end %>
     </div>
     <h3>Listing homes</h3>
 
@@ -23,7 +25,13 @@
             <td><%= home.title %></td>
             <td><%= home.home_page_desc %></td>
             <td><%= link_to(home.url, home.url, :target => "_blank") if home.url  %></td>
-            <td><%= link_to 'Show', admin_home_path(home) %> | <%= link_to 'Edit', edit_admin_home_path(home) %> | <%= link_to 'Delete', admin_home_path(home), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <td>
+              <%= link_to 'Show', admin_home_path(home) %>
+              <% if current_user.is_admin? %> | 
+                <%= link_to 'Edit', edit_admin_home_path(home) %> | 
+                <%= link_to 'Delete', admin_home_path(home), method: :delete, data: { confirm: 'Are you sure?' } %>
+              <% end %>
+            </td>
           </tr>
         <% end %>
       </table>
@@ -31,7 +39,7 @@
         <%= page_entries_info @homes %>
         <%= page_navigation_links @homes %>
       </div>
-    <% elsif @search == "1" %>
+    <% elsif params[:search] == "1" %>
       <div class="alert alert-warning">No homes found</div>
     <% else %>
       <div class="alert alert-warning">No homes have been added yet.</div>
