--- a/app/views/smartrent/admin/more_homes/show.html.erb
+++ b/app/views/smartrent/admin/more_homes/show.html.erb
@@ -28,6 +28,7 @@
   <%= @more_home.home.title %>
 </p>
 
-
-<%= link_to 'Edit', edit_admin_more_home_path(@more_home) %> |
+<% if current_user.is_admin? %>
+  <%= link_to 'Edit', edit_admin_more_home_path(@more_home) %> |
+<% end %>
 <%= link_to 'Back', admin_more_homes_path %>
