--- a/app/views/smartrent/admin/rewards/show.html.erb
+++ b/app/views/smartrent/admin/rewards/show.html.erb
@@ -12,6 +12,8 @@
   </div>
   <br />
   <br />
-  <%= link_to 'Edit', edit_admin_reward_path(@reward) %> |
+  <% if current_user.is_admin? %>
+    <%= link_to 'Edit', edit_admin_reward_path(@reward) %> |
+  <% end %>
   <%= link_to 'Back', admin_rewards_path %>
 </div>
