--- a/app/views/smartrent/admin/settings/show.html.erb
+++ b/app/views/smartrent/admin/settings/show.html.erb
@@ -10,8 +10,9 @@
       <%= @setting.value %>
     </p>
 
-
-    <%= link_to 'Edit', edit_admin_setting_path(@setting) %> |
+    <% if current_user.is_admin? %>
+      <%= link_to 'Edit', edit_admin_setting_path(@setting) %> |
+    <% end %>
     <%= link_to 'Back', admin_settings_path %>
   </div>
 <% end %>
