--- a/app/views/smartrent/articles/index.html.erb
+++ b/app/views/smartrent/articles/index.html.erb
@@ -14,8 +14,10 @@
     <td><%= article.title %></td>
     <td><%= article.text %></td>
     <td><%= link_to 'Show', article %></td>
-    <td><%= link_to 'Edit', edit_article_path(article) %></td>
-    <td><%= link_to 'Delete', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <% if current_user.is_admin? %>
+      <td><%= link_to 'Edit', edit_article_path(article) %></td>
+      <td><%= link_to 'Delete', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <% end %>
   </tr>
 <% end %>
 </table>
