--- a/app/views/smartrent/articles/show.html.erb
+++ b/app/views/smartrent/articles/show.html.erb
@@ -10,6 +10,7 @@
   <%= @article.text %>
 </p>
 
-
-<%= link_to 'Edit', edit_article_path(@article) %> |
+<% if current_user.is_admin? %>
+  <%= link_to 'Edit', edit_article_path(@article) %> |
+<% end %>
 <%= link_to 'Back', articles_path %>
