--- a/app/views/smartrent/contacts/show.html.erb
+++ b/app/views/smartrent/contacts/show.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-
-<%= link_to 'Edit', edit_contact_path(@contact) %> |
+<% if current_user.is_admin? %>
+  <%= link_to 'Edit', edit_contact_path(@contact) %> |
+<% end %>
 <%= link_to 'Back', contacts_path %>
