--- a/app/views/smartrent/properties/_row.html.erb
+++ b/app/views/smartrent/properties/_row.html.erb
@@ -136,7 +136,7 @@
     </div>
 
     <div class="learnMore">
-      <h3><%= link_to "Learn More", property_path(property_) %></h3>
+      <h3><%= link_to "Learn More",  property_.bozzuto_url, :target => "_blank" %></h3>
     </div>
 
     <div class="clear"></div>
