reskin login form, reset password form, sessions links

--- a/app/assets/stylesheets/smartrent/layout.css.erb
+++ b/app/assets/stylesheets/smartrent/layout.css.erb
@@ -1399,38 +1399,34 @@ label{
   color:#7395bc;
 }
 
-.memberInfo .loginForm{
-}
-
-.memberInfo .loginForm .inpt{
-}
-
-.memberInfo .loginForm .inpt .loginLabel{
-  padding:3px 0 0 10px;
-  font-size:.8em;
-  color:#909090;
-  position:absolute;
-  text-transform:uppercase;
-}
-
 .memberInfo .loginForm .form-group {
   margin-bottom:0px;
 }
 
 .memberInfo .loginForm .form-group input{
-  font-family:'FontSite Sans',arial,sans-serif;
-  font-size:.8em;
-  color:#788a8a;
-  width:161px;
-  height:24px;
-  margin:7px 0 0 0;
-  padding:3px 0 3px 10px;
-  /*text-transform: uppercase;*/
+  background-color: #eaeaea;
+  border: 1px solid #9b9999;
+  color: #788a8a;
+  font-family: "FontSite Sans",arial,sans-serif;
+  font-size: 0.8em;
+  height: 24px;
+  margin: 7px 0 0;
+  padding: 0 0 0 10px;
+  width: 161px;
 }
 
-.memberInfo .loginForm .btn{
-  margin-top: 5px;
-  width: 80px;
+.memberInfo .loginForm .actions {
+    margin-top: 5px;
+}
+
+.memberInfo .loginForm .actions input {
+  background-color: #7395bc;
+  border: 0 none;
+  color: #ffffff;
+  font-family: "FontSite Sans",arial,sans-serif;
+  font-size: 0.8em;
+  height: 18px;
+  width: 64px;
 }
 
 .memberInfo .loginForm .links{
@@ -1479,36 +1475,33 @@ label{
   color:#000000;
 }
 
-.member .memberRight .loginForm{
+.member .memberRight .loginForm .form-group {
+  margin-bottom: 0;
 }
-
-.member .memberRight .loginForm .inpt{
-}
-
-.member .memberRight .loginForm .inpt .loginLabel{
-  padding:14px 0 0 10px;
-  font-size:1.2em;
-  color:#909090;
-  position:absolute;
-  text-transform:uppercase;
-}
-
 .member .memberRight .loginForm .form-group input{
+  background-color: #eaeaea;
+  border: 1px solid #9b9999;
+  color: #788a8a;
   font-family: "FontSite Sans",arial,sans-serif;
   font-size: 1.2em;
-  margin-top: 10px;
+  height: 34px;
+  margin: 7px 0 0;
+  padding: 0 0 0 10px;
   width: 265px;
 }
 
-.member .memberRight .loginForm .btn{
-  width: 100px;
+.member .memberRight .loginForm .actions {
+  margin: 15px 0 0;
 }
 
-.member .memberRight .loginForm .btn input{
+.member .memberRight .loginForm .actions input{
+  background-color: #7395bc;
+  border: 0 none;
+  color: #ffffff;
   font-family: "FontSite Sans",arial,sans-serif;
   font-size: 1.2em;
-  margin-top: 10px;
-  width: 265px;
+  height: 26px;
+  width: 84px;
 }
 
 .member .memberRight .links{
@@ -1619,27 +1612,33 @@ label{
   max-width:400px;
 }
 
-.member .memberRight .forgotForm .title{
-}
-
-.member .memberRight .forgotForm .message{
-}
-
-.member .memberRight .forgotForm .formInputs{
-}
-
 .member .memberRight .forgotForm .formInputs .labelText{
   margin:10px 0 0 0;
 }
 
-.member .memberRight .forgotForm .formInputs .inputField{
+.member .memberRight .forgotForm .formInputs .form-group {
+  margin-bottom: 0;
+}
+.member .memberRight .forgotForm .formInputs .form-group input {
+  background-color: #eaeaea;
+  border: 1px solid #9b9999;
+  color: #788a8a;
+  font-family: "FontSite Sans",arial,sans-serif;
+  font-size: 1.2em;
+  height: 34px;
+  margin: 0 0 10px;
+  padding: 0 0 0 10px;
+  width: 265px;
 }
 
-.member .memberRight .forgotForm .formInputs .form-group input.form-control{
-  font-family:'FontSite Sans',arial,sans-serif;
-  font-size:1.2em;
-  width:265px;
-  margin-top: 10px;
+.member .memberRight .forgotForm .formInputs .submitButton input {
+  background-color: #7395bc;
+  border: 0 none;
+  color: #ffffff;
+  font-family: "FontSite Sans",arial,sans-serif;
+  font-size: 0.8em;
+  height: 26px;
+  width: 126px;
 }
 
 .member .memberStatementLeft{
