--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -18,10 +18,10 @@
           </div>
 
           <div class="form-group">
-            <%= f.email_field :email, autofocus: true, :class => "form-control" %>
+            <%= f.email_field :email, autofocus: true %>
           </div>
           <div class="submitButton">
-            <%= f.submit "Request Password Reset", :class => "btn btn-primary" %>
+            <%= f.submit "Request Password Reset" %>
           </div>
         <% end %>
       </div>
