--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,22 +1,34 @@
-<h2>Change your password</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :reset_password_token %>
-
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
+<div class="member clearfix">
+  <div class="memberLeft">
+    <%= image_tag "login.jpg" %>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+  <div class="memberRight">
+    <div class="forgotForm clearfix">
+      <div class="formInputs">
+        <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+          <div class="message"><%= devise_error_messages! %></div>
+          <%= f.hidden_field :reset_password_token %>
+          
+          <div class="labelText">
+            <%= f.label :password, "New password" %>
+          </div>
+          <div class="form-group">
+            <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
+          </div>
+          
+          <div class="labelText">
+            <%= f.label :password_confirmation, "Confirm new password" %>
+          </div>
+          <div class="form-group">
+            <%= f.password_field :password_confirmation, autocomplete: "off" %>
+          </div>
+          
+          <div class="submitButton">
+            <%= f.submit "Reset Password" %>
+          </div>
+        <% end %>
+      </div>
+    </div>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
