--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -12,12 +12,12 @@
   <% end -%>
 
   <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
-    <%= link_to "Didn't receive confirmation instructions?", new_confirmation_path(resource_name) %><br />
+    <%= link_to "Activate Your Account", new_confirmation_path(resource_name) %><br />
   <% end -%>
 
   <%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
-    <%= link_to "Activate Your Account", new_unlock_path(resource_name) %><br />
-    <!-- <%#= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name) %><br /> -->
+    <!--  <%#= link_to "Unlock Your Account", new_unlock_path(resource_name) %><br />
+    <%#= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name) %><br /> -->
   <% end -%>
 
   <%- if devise_mapping.omniauthable? %>
