--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,16 +1,32 @@
-<h2>Resend unlock instructions</h2>
-
-<%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+<div class="member clearfix">
+  <div class="memberLeft">
+    <%= image_tag "login.jpg" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Resend unlock instructions" %>
-  </div>
-<% end %>
+  <div class="memberRight">
+    <div class="forgotForm clearfix">
+      <div class="formInputs">
+        <%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
+          <div class="message"><%= devise_error_messages! %></div>
+          <div class="labelText">
+            <%= f.label :email, "Email Address" %>
+          </div>
 
-<%= render "devise/shared/links" %>
+          <div class="form-group">
+            <%= f.email_field :email, autofocus: true %>
+          </div>
+          <div class="submitButton">
+            <%= f.submit "Unlock Account" %>
+          </div>
+        <% end %>
+      </div>
+
+      <div class="formInstructions">
+        <p>
+          An unlock email will be sent to your email address. 
+          If you do not receive an email please check your spam folder.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
