--- a/app/views/layouts/smartrent/_header.html.erb
+++ b/app/views/layouts/smartrent/_header.html.erb
@@ -52,7 +52,7 @@
               <% end %>
               <div class="links">
                 <%= link_to "Forgot your password?", new_password_path(:resident) %>
-                <%= link_to "Activate Your Account", new_unlock_path(:resident) %>
+                <%= link_to "Activate Your Account", new_confirmation_path(:resident) %>
               </div>
             </div>
           </div>
