--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -16,7 +16,7 @@
       </div>
       
       <div class="formInputs">
-        <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
+        <%= form_for(resource, as: resource_name, url: member_confirmation_path, html: { method: :post }) do |f| %>
           <div class="message"><%= devise_error_messages! %></div>
           <div class="labelText">
             <%= f.label :email, "Email Address" %>
