--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -6,7 +6,7 @@
   <div class="memberRight">
     <div class="forgotForm clearfix">
       <div class="formInputs">
-        <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+        <%= form_for(resource, as: resource_name, url: member_password_path, html: { method: :put }) do |f| %>
           <div class="message"><%= devise_error_messages! %></div>
           <%= f.hidden_field :reset_password_token %>
           
