--- a/app/views/layouts/smartrent/_header.html.erb
+++ b/app/views/layouts/smartrent/_header.html.erb
@@ -38,7 +38,7 @@
               Resident Log-In
             </div>
             <div class="loginForm">
-              <%= form_for(:resident, url: session_path(:resident)) do |f| %>
+              <%= form_for(:resident, url: new_member_login_path) do |f| %>
                 <div class="form-group">
                   <%= f.email_field :email, autofocus: false, :placeholder => "EMAIL (MUST MATCH YOUR LEASE)" %>
                 </div>
@@ -51,8 +51,8 @@
                 </div>
               <% end %>
               <div class="links">
-                <%= link_to "Forgot your password?", new_password_path(:resident) %>
-                <%= link_to "Activate Your Account", new_confirmation_path(:resident) %>
+                <%= link_to "Forgot your password?", new_member_password_path %>
+                <%= link_to "Activate Your Account", new_member_confirmation_path %>
               </div>
             </div>
           </div>
@@ -73,7 +73,7 @@
             </div>
 
             <div class="link">
-              <%= link_to "Reset Password", change_password_residents_path  %>
+              <%= link_to "Reset Password", change_password_member_path  %>
             </div>
 
             <div class="link">
