--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,11 @@
-<p>Hello <%= @resource.email %>!</p>
-
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
-
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
-
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<html>
+  <head>
+    <title>Password Reset Request</title>
+  </head>
+  <body>
+    <p>A request to reset your password was received.  If you did not make this request you can ignore this email.  Your account has not been altered.</p>
+    <p><%= link_to 'To reset your password follow this link', edit_password_url(@resource, reset_password_token: @token) %></p>
+    <p>If the link above does not work copy and paste the following address into a browser http://$_SERVER[HTTP_HOST]/reset/?id=$prID</p>
+    <p>The request will only be active for 12 hours. If you are unable to complete the process in that time you may make another request.</p>
+  </body>
+</html>
