small change in mail template

--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -5,7 +5,7 @@
   <body>
     <p>A request to reset your password was received.  If you did not make this request you can ignore this email.  Your account has not been altered.</p>
     <p><%= link_to 'To reset your password follow this link', edit_password_url(@resource, reset_password_token: @token) %></p>
-    <p>If the link above does not work copy and paste the following address into a browser http://$_SERVER[HTTP_HOST]/reset/?id=$prID</p>
+    <p>If the link above does not work copy and paste the following address into a browser <%= edit_password_url(@resource, reset_password_token: @token) %></p>
     <p>The request will only be active for 12 hours. If you are unable to complete the process in that time you may make another request.</p>
   </body>
 </html>
