--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -7,7 +7,7 @@
       <p>
         <%= link_to 'To activate your account follow this link', confirmation_url(@resource, confirmation_token: @token) %>
       </p>
-      <p>If the link above does not work copy and paste the following address into a browser http://$_SERVER[HTTP_HOST]/activate/?id=$prID</p>
+      <p>If the link above does not work copy and paste the following address into a browser <%= confirmation_url(@resource, confirmation_token: @token) %></p>
       <p>The request will only be active for 12 hours. If you are unable to complete the process in that time you may make another request.</p>
   </body>
 </html>
