--- a/app/assets/stylesheets/smartrent/layout.css.erb
+++ b/app/assets/stylesheets/smartrent/layout.css.erb
@@ -168,6 +168,34 @@ label{
   width:100%;
 }
 
+#error_explanation {
+ border: 1px solid red;
+ margin: 0 auto;
+ padding: 0;
+}
+#error_explanation h2 {
+ background-color: red;
+ color: #fff;
+ font-size: 15px;
+ margin: 0;
+ padding: 10px;
+}
+#error_explanation p {
+ margin: 0;
+ padding: 15px 10px 5px;
+}
+#error_explanation ul {
+ margin-left: 15px;
+ padding: 0 10px;
+}
+#error_explanation ul li {
+ font-size: 12px;
+ list-style: outside none square;
+}
+.field_with_errors input, .field_with_errors textarea {
+ border: 1px solid #cccccc;
+}
+
 .dropshadow{
   background:url("<%= asset_path "bannerGradient.gif"%>") bottom left repeat-x;
   padding-bottom:3px;
