error messages according to crm

--- a/app/assets/stylesheets/smartrent/layout.css.erb
+++ b/app/assets/stylesheets/smartrent/layout.css.erb
@@ -168,27 +168,27 @@ label{
   width:100%;
 }
 
-#error_explanation {
+#error-explanation {
  border: 1px solid red;
  margin: 0 auto;
  padding: 0;
 }
-#error_explanation h2 {
+#error-explanation h2 {
  background-color: red;
  color: #fff;
  font-size: 15px;
  margin: 0;
  padding: 10px;
 }
-#error_explanation p {
+#error-explanation p {
  margin: 0;
  padding: 15px 10px 5px;
 }
-#error_explanation ul {
+#error-explanation ul {
  margin-left: 15px;
  padding: 0 10px;
 }
-#error_explanation ul li {
+#error-explanation ul li {
  font-size: 12px;
  list-style: outside none square;
 }
