--- a/app/views/devise/confirmations/_password_create_form.html.erb
+++ b/app/views/devise/confirmations/_password_create_form.html.erb
@@ -1,16 +1,7 @@
 <div class="formInputs">
   <%= form_for resource, :as => resource_name, :url => update_member_confirmation_path, :html => {:method => 'put'}, :id => 'activation-form' do |f| %>
     <div class="message">
-      <% if resource.errors.any? %>
-        <div id="error_explanation">
-          <h2>Confirmation Failed</h2>
-          <ul>
-            <% resource.errors.full_messages.each do |msg| %>
-              <li><%= msg %></li>
-            <% end %>
-          </ul>
-        </div>
-      <% end %>
+      <%= render "layouts/error_messages", :target => resource, :header_message => "Confirmation Failed" %>
     </div>
     <div class="labelText">
       <%= f.label :password, "Choose a Password" %>
