--- a/app/views/smartrent/contacts/_form.html.erb
+++ b/app/views/smartrent/contacts/_form.html.erb
@@ -1,16 +1,5 @@
 <%= form_for(@contact) do |f| %>
-  <% if @contact.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@contact.errors.count, "error") %> prohibited this contact from being saved:</h2>
-
-      <ul>
-      <% @contact.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
+  <%= render "layouts/error_messages", :target => @contact, :header_message => "Message sending failed" %>
   <div class="actions">
     <%= f.submit %>
   </div>
