login box removed on login page

--- a/app/views/layouts/smartrent/_header.html.erb
+++ b/app/views/layouts/smartrent/_header.html.erb
@@ -30,7 +30,7 @@
         <%= link_to "Learn More", smartrent.new_contact_path %>
       </div>
 
-      <% if !request.fullpath.include? "sign_in" %>
+      <% if !request.fullpath.include? "member-login" %>
         <div class="memberInfo">
           <% if !resident_signed_in? %>
           <div id="loginFields">
