date format change

--- a/app/views/smartrent/residents/statement.html.erb
+++ b/app/views/smartrent/residents/statement.html.erb
@@ -28,7 +28,7 @@
 
     <div class="movein">
       <% if @resident.move_in_date %>
-        <span class="label">Move-In Date:</span> <%= @resident.move_in_date.to_s(:year_month_day) %>
+        <span class="label">Move-In Date:</span> <%= @resident.move_in_date.to_s(:short_date) %>
       <% end %>
     </div>
 
